[package]
name = "pretendo-pid-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.28", features = ["serialize"] }

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
